# OffPolicyLab

./: AGENT.md  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  how_to_interpret_ope_outputs_ru.md  ope_methods_math_guide_ru.md  validation_harness.md
examples/: .gitkeep  compare_estimators_vs_oracle_ru.ipynb  quickstart_own_data_ru.ipynb  run_synthetic_experiment.py  run_validation_experiment.py  tutorial.ipynb
src/policyscope/: __init__.py  bootstrap.py  ci.py  comparison.py  data.py  diagnostics.py  estimators.py  evaluator.py  inference.py  nuisance.py  nuisance_diagnostics.py  policies.py  policy_adapters.py  report.py  synthetic.py  validation.py
src/policyscope/backends/: __init__.py  pyspark_backend.py
tests/: test_bootstrap_report.py  test_comparison.py  test_data_contract.py  test_diagnostics.py  test_docs_consistency.py  test_estimators.py  test_nuisance.py  test_nuisance_diagnostics.py  test_policy_adapters.py  test_validation.py
